--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   cloud_firestore: ^4.12.2
   sliver_tools: ^0.2.12
+  sliver_stream_builder: ^0.4.0
 
 dev_dependencies:
   flutter_test:
